# rmsgw

./: Makefile.am  configure.ac
admin/: getchannel.py.in  getsysop.py.in  getversionlist.py.in  mksysop.py.in  updatechannel.py.in  updatesysop.py.in  updateversion.py.in
cron/: Makefile.am  rmsgw.in
debian/: config  control  postinst  rules  templates
devutils/: rmsgwchantest.c
etc/: Makefile.am  acihelp.in  channels.xml.in  gateway.conf.in
include/: rmslib.h  rmsshm.h
lib/: cmsconnect.c  fileage.c  getchan.c  getcms.c  loadconfig.c  loadenv.c  readln.c  runhook.c  senddatagram.c  sendrf.c  set.c  setcmsstat.c  sglchallenge.c  statblock.c  statfile.c  strtrim.c  syslogmap.c  var.c
man/: Makefile.am  rmsfinddev.1
rmsgw/: gateway.c  rmsgw.c
rmsgw_aci/: rmsgw_aci.c  wl2k_aci.c
rmsgwmon/: rmsgwmon.c
